# template-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/initialize/: load_config.rs  mod.rs  prevent_multiple.rs  setup_logger.rs
src/components/pages/: Main.vue
